src/Sidecar/envoy.yaml
static_resources:
  listeners:
    - name: "ingress_http"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: ${LISTENER_PORT}
      filter_chains:
        - filters:
            - name: "envoy.filters.network.http_connection_manager"
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                stat_prefix: "ingress_http"
                use_remote_address: true
                generate_request_id: true
                preserve_external_request_id: false
                always_set_request_id_in_response: true
                http_filters:
                  - name: "envoy.filters.http.fault"
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault"
                      max_active_faults: 100
                      delay:
                        header_delay: {}
                        percentage:
                          numerator: 100
                          denominator: HUNDRED
                      abort:
                        header_abort: {}
                        percentage:
                          numerator: 100
                          denominator: HUNDRED
                      response_rate_limit:
                        header_limit: {}
                        percentage:
                          numerator: 100
                          denominator: HUNDRED
                  - name: "envoy.filters.http.compressor"
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor"
                      response_direction_config:
                        disable_on_etag_header: true
                        remove_accept_encoding_header: true
                      compressor_library:
                        name: "text_optimized"
                        typed_config:
                          "@type": "type.googleapis.com/envoy.extensions.compression.brotli.compressor.v3.Brotli"
                          quality: 8
                          encoder_mode: TEXT
                  - name: "envoy.filters.http.router"
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                route_config:
                  virtual_hosts:
                    - name: "default"
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "main_container"
                            timeout: 0s

  clusters:
    - name: "main_container"
      type: STRICT_DNS
      load_assignment:
        cluster_name: "main_container"
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${SERVICE_NAME}
                      port_value: ${SERVICE_PORT}
